<resources>
    <string name="app_name">MyWork</string>
    <string name="action_settings">Settings</string>
<!--</string>R.string.open_string,R.string.close_string-->
    <string name="open_string">打开</string>
    <string name="close_string">关闭</string>
    <!-- 底下的文字-->
    <string name="first">笑话</string>
    <string name="second">公交</string>
    <string name="third">资讯</string>
    <string name="forth">历史</string>
    <string name="fifth">关于</string>


    <!-- 其他文字-->
    <string name="query">查询</string>
    <string name="choose">选择</string>
    <string name="sure">确认,显示答案</string>
    <!-- 侧边栏的文字-->
    <string name="mail">邮政查询</string>
    <string name="phone">手机归属地查询</string>
    <string name="identity">身份证查询</string>
    <string name="Drivers_license_exam">驾照题库</string>
    <string name="about_bus">关于客运的</string>
    <string name="motor_station">汽车站查询</string>
    <string name="motor_station_mess">汽车站到站检索</string>

    <!-- 邮政的文字-->
    <string-array name="choose">
        <item>编码</item>
        <item>城市</item>
    </string-array>

    <!-- 身份证的查询接口-->
    <string-array name="identity">
        <item>信息查询</item>
        <item>泄露查询</item>
    </string-array>
    <string name="identity_tip1">请输入身份证号码</string>
    <string name="identity_tip2">安全是指没有搜索到您所提供的身份证号码在互联网中公开散布</string>

    <!-- 驾照题库-->
    <string name="tip">0 选择题 1 判断题 2 多选题</string>
        <string-array name="driver_model">
            <item>c1</item>
            <item>c2</item>
            <item>a1</item>
            <item>a2</item>
            <item>b1</item>
            <item>b2</item>
        </string-array>
    <string-array name="driver_testType">
        <item>随机测试</item>
        <item>顺序测试</item>
    </string-array>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="complete">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="back">返回</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="dynamic_state">有什么惊人的思想要写下来吗？？？？？？</string>
    <string name="desc_main_image">首页图片组件</string>
     <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
